# any-to-pdf

./: CONTRIBUTING.md  LICENSE  License.txt  README.md  any-to-pdf.py  appUI.py  gui.py  main.py  mainWindow.py  pyproject.toml  requirements.txt
files/: file.txt  mydoc.docx
